--- a/application/src/main/java/org/exoplatform/chat/portlet/notification/assets/base.less
+++ b/application/src/main/java/org/exoplatform/chat/portlet/notification/assets/base.less
@@ -178,9 +178,13 @@
 	#gradient > .vertical (#4f4f4f,#474747);
     .fullname {
         line-height: 100%;
-      font-weight: bold;
-	  color:@white;
-	  font-size: 14px;
+        font-weight: bold;
+        color:@white;
+        font-size: 14px;
+        display: inline-block;
+        vertical-align: -2px;
+        .text-overflow;
+        max-width: 175px;
     }
 
     .btn-close {
