--- a/application/src/main/java/org/exoplatform/chat/portlet/notification/assets/chat-mini.less
+++ b/application/src/main/java/org/exoplatform/chat/portlet/notification/assets/chat-mini.less
@@ -311,6 +311,6 @@
 		min-width: 10px;
 		padding: 0 4px;
 		text-align: center;
-		vertical-align: middle;
+		vertical-align: -3px;
 	}
 }
